# eda-challenge-2022

./: CMakeLists.txt
api/: CMakeLists.txt
src/: CMakeLists.txt  Router.cpp  Router.hpp
src/data_manager/: Block.hpp  Config.hpp  Coordinate.hpp  DataManager.cpp  DataManager.hpp  DataType.hpp  Database.hpp  Instance.hpp  Net.hpp  Node.hpp  Orientation.hpp  Rectangle.hpp  Segment.hpp  parse.hpp
src/logger/: LogLevel.hpp  Logger.cpp  Logger.hpp
src/util/: COMUtil.hpp
test/: input.txt  test.cpp
test/data/case2/: input.txt
